libs/preprocessor/tests/errors/pe9_function_call_argument_count/stderr.ansi
[31m[PE9] Error:[0m function call with incorrect number of arguments, expected `1` got `2`
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:3:1[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249md[0m[38;5;249me[0m[38;5;249mf[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;201mH[0m[38;5;201mE[0m[38;5;201mL[0m[38;5;201mL[0m[38;5;201mO[0m[38;5;249m([0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249mH[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249mr[0m
 [38;5;240m  │[0m         [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m           [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m defined here with 1 argument
 [38;5;240m  │[0m 
 [38;5;246m3 │[0m [38;5;201mH[0m[38;5;201mE[0m[38;5;201mL[0m[38;5;201mL[0m[38;5;201mO[0m[38;5;249m([0m[38;5;249mw[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249ml[0m[38;5;249md[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249me[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249m)[0m
 [38;5;240m  │[0m [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m[38;5;201m─[0m  
 [38;5;240m  │[0m   [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m called with 2 arguments here
[38;5;246m───╯[0m
